--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "keeper-app-part-1-starting",
+  "homepage": "http://bhavya0404.github.io/Google-Keep-Clone",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -10,12 +11,15 @@
     "react-scripts": "3.2.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "browserslist": [
